Fix disappearing wa-details summaries and wa-drawer-labels on Safari
Same Safari bug as in command-link with confusion over shadow DOM dialog tree.
Apply same workaround, globally, for wa-details summary slot.
No global workaround available for wa-drawer label (without hacking WA internal
css). Apply local workaround in help-viewer by using additional div wrapper.

Symptom: In about-dialog open nested settings-dialog (from privacy section).
Close settings-dialog. Details summary labels disappear from about-dialog.

--- a/src/css/wa-tweaks.css
+++ b/src/css/wa-tweaks.css
@@ -40,3 +40,12 @@ wa-button::part(caret),
 wa-details::part(icon) {
   width: 1em;
 }
+
+/* Avoid Safari bug where slotted content within a dialog disappears
+ * when some other dialog is closed. (There are probably other cases with the
+ * same problem: anything where Web Awesome renders slots with the default
+ * UA stylesheet `display: contents`.) */
+wa-details::part(summary) {
+  /* <slot name="summary" part="summary"> */
+  display: inline;
+}
